--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prova-react-chat-app",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "emoji-picker-react": "^3.5.1",
     "fortawesome": "^0.0.1-security",
     "jsencrypt": "^3.2.1",
     "react": "^18.1.0",
